Add Spinner and Error and Initial Messages

--- a/2 - CEP Project/index.html
+++ b/2 - CEP Project/index.html
@@ -16,15 +16,22 @@
             <div class="search-bar">
                 <form class="search-form">
                     <input type="text" placeholder="Pesquise aqui pelo CEP!" class="search-input">
-                    <button class="search-button">PESQUISAR</button>
+                    <button class="search-button">
+                        <div class="search-button-content">
+                            <svg class="search-icon">
+                                <use href="./img/icons.svg#icon-search"></use>
+                            </svg>
+                            <span>PESQUISAR</span>
+                        </div>
+                    </button>
                 </form>
             </div>
         </div>
         <div class="main-area">
             <div class="saved-list">
-                
             </div>
             <div class="main">
+
             </div>
             </div>
         </div>
